--- a/bsNavegacionCard.html
+++ b/bsNavegacionCard.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
 </head>
 <body>
     <div class="container-fluid">
@@ -18,12 +17,12 @@
                 <li class="nav-item">
                     <a href="bsTablas.html" class="nav-link">Tabla</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="bsGrilla.html" class="nav-link">Grilla</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      No Bootstrap
+                      No bootstrap
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="formulario.html">Formulario</a></li>
@@ -32,14 +31,57 @@
                       <li><a class="dropdown-item" href="htmlEstilo.html">Estilo</a></li>
                     </ul>
                   </li>
-
             </ul>
 
         </nav>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <hr>
+    <div class="container">
+        <h1>Cards en bootstrap</h1>
+        <div class="row">
+            <div class="col-md">
+                <div class="card text-center bg-info">
+                    <img src="cat--v2.png" alt="Gato" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Gato Blanco</h4>
+                        <p class="card-text">El Gato mas lindo de todos</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
 
+                </div>
+
+            </div>
+            <div class="col-md">
+                <div class="card text-center bg-warning">
+                    <img src="foto1.png" alt="Allien" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Visitante</h4>
+                        <p class="card-text">Visitante Nuevo</p>
+                        <a href="#" class="btn btn-primary">Saludar</a>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col-md">
+                <div class="card text-center bg-light">
+                    <img src="unicorn.png" alt="Unicornio" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Unicornio</h4>
+                        <p class="card-text">Animal Fantastico</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     
 </body>
 </html>
